--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,13 +23,12 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     
     - name: Install backend dependencies
       run: npm ci
     
     - name: Install frontend dependencies
-      run: cd client && npm ci
+      run: cd client && npm install
     
     - name: Build frontend
       run: cd client && npm run build
