--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,8 @@ jobs:
     
     - name: Build frontend
       run: cd client && npm run build
+      env:
+        CI: false
     
     - name: Verify build artifacts
       run: |
