--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,4 +40,30 @@ jobs:
         test -d client/build || (echo "Build folder not found" && exit 1)
         test -f client/build/index.html || (echo "index.html not found" && exit 1)
         echo "✅ Build successful!"
+  
+  # Deploy to production server
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+    - name: Deploy to server via SSH
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          cd /root/Health_Check_amoCRM
+          git pull origin main
+          npm ci
+          cd client
+          npm install
+          npm run build
+          cd ..
+          pm2 restart amocrm-health-monitor
+          pm2 save
+          nginx -s reload
+          echo "✅ Deployment completed!"
 
