--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,6 +56,8 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /root/Health_Check_amoCRM
+          git reset --hard
+          git clean -fd
           git pull origin main
           npm ci
           cd client
