fix: preserve data/ folder with tokens during deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
         script: |
           cd /root/Health_Check_amoCRM
           git reset --hard
-          git clean -fd
+          git clean -fd -e data/
           git pull origin main
           npm ci
           cd client
