--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,41 @@
-# amoCRM OAuth 2.0 Configuration
-# Получите учетные данные в настройках интеграции amoCRM
+# amoCRM OAuth Configuration
+# Получите эти данные в настройках интеграции amoCRM
 AMOCRM_DOMAIN=your-domain.amocrm.ru
-AMOCRM_CLIENT_ID=your_client_id_here
-AMOCRM_CLIENT_SECRET=your_client_secret_here
+AMOCRM_CLIENT_ID=your_client_id
+AMOCRM_CLIENT_SECRET=your_client_secret
 AMOCRM_REDIRECT_URI=https://your-domain.com/oauth/callback
+AMOCRM_ACCESS_TOKEN=your_initial_access_token
+AMOCRM_REFRESH_TOKEN=your_initial_refresh_token
 
-# amoCRM Tokens
-# После первой авторизации токены будут автоматически сохраняться в data/tokens.json
-AMOCRM_ACCESS_TOKEN=initial_access_token_here
-AMOCRM_REFRESH_TOKEN=initial_refresh_token_here
-
-# Mattermost Webhook Configuration
-MATTERMOST_WEBHOOK_URL=https://your-mattermost-server.com/hooks/your_webhook_id
-
-# Mattermost Mentions (опционально)
-# Пользователи, которые будут упомянуты в уведомлениях
+# Mattermost Notifications
+# URL вебхука для отправки уведомлений
+MATTERMOST_WEBHOOK_URL=https://your-mattermost.com/hooks/webhook_id
+# Упоминания пользователей в уведомлениях (через пробел)
 MATTERMOST_MENTIONS=@user1 @user2
 
-# API Security
-# Генерация: openssl rand -hex 32
-# Опционально, но рекомендуется для production
-API_SECRET=
+# Security (ОБЯЗАТЕЛЬНО в production!)
+# Используйте: openssl rand -hex 32
+API_SECRET=generate_random_secret_here
 
-# Monitoring Configuration
-# Интервал между проверками (в миллисекундах)
-CHECK_INTERVAL=30000
-
-# Timeout для определения падения сервиса (в миллисекундах)
+# Monitoring Settings
+# Интервал проверок в миллисекундах (по умолчанию 60000 = 1 минута)
+CHECK_INTERVAL=60000
+# Таймаут для определения падения сервиса в миллисекундах (по умолчанию 10000 = 10 секунд)
 TIMEOUT_THRESHOLD=10000
 
 # Server Configuration
 PORT=3001
 NODE_ENV=development
 
-# Logging
-LOG_LEVEL=info
+# Optional: CORS Configuration
+# Разрешенные origins через запятую, или * для всех
+ALLOWED_ORIGINS=*
+
+# Optional: Deployment Configuration
+# Используется только для деплой скрипта
+DEPLOY_SERVER=root@your-server-ip
+DEPLOY_PASSWORD=your_deploy_password
+
+# Optional: Redis Configuration (для кеширования, если используется)
+# REDIS_URL=redis://localhost:6379
+# REDIS_ENABLED=false
