--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "jest-environment-jsdom": "^30.2.0",
     "react-scripts": "5.0.1"
   },
   "proxy": "http://localhost:3001"
