feat: replace console.log with Winston logger and log rotation
- Add winston and winston-daily-rotate-file packages
- Implement comprehensive logging with file rotation (30 days combined, 14 days errors)
- Add separate log files for exceptions and rejections
- Configure log levels based on environment (debug in dev, info in prod)
- Add HTTP request logging method
- Update tests to work with Winston mocks
- Add logs/ directory to .gitignore

Benefits:
- Automatic log rotation prevents disk space issues
- Structured logging with metadata support
- Better error tracking with stack traces
- Production-ready logging solution

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "luxon": "^3.4.4",
     "node-cron": "^3.0.3",
     "prom-client": "^15.1.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
