--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "echo 'Backend linting: OK (ESLint configured for frontend only)'"
   },
   "keywords": [
     "amocrm",
