--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,7 +65,7 @@ jobs:
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
-        run: cd client && npm ci
+        run: cd client && npm install
 
       - name: Run ESLint
         run: cd client && npm run lint || echo "ESLint not configured yet"
@@ -101,7 +101,7 @@ jobs:
         run: npm ci
 
       - name: Install frontend dependencies
-        run: cd client && npm ci
+        run: cd client && npm install
 
       - name: Build frontend
         run: cd client && npm run build
