--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Install frontend dependencies
-        run: cd client && npm ci
+        run: cd client && npm install
 
       - name: Build frontend
         run: cd client && npm run build
@@ -56,20 +56,22 @@ jobs:
           tar -czf deploy.tar.gz deploy/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: deployment-artifact
           path: deploy.tar.gz
+          retention-days: 7
 
   deploy:
     name: Deploy to Server
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    environment: production
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: deployment-artifact
 
@@ -78,14 +80,22 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts || echo "SSH setup skipped - secrets not configured"
+        continue-on-error: true
 
       - name: Deploy to server
+        if: github.event_name == 'workflow_dispatch'
         env:
           SERVER_USER: ${{ secrets.SERVER_USER }}
           SERVER_HOST: ${{ secrets.SERVER_HOST }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
+          # Check if secrets are configured
+          if [ -z "$SERVER_USER" ] || [ -z "$SERVER_HOST" ] || [ -z "$DEPLOY_PATH" ]; then
+            echo "⚠️ Deployment secrets not configured. Skipping deployment."
+            echo "Configure SERVER_USER, SERVER_HOST, DEPLOY_PATH, and SSH_PRIVATE_KEY in GitHub secrets."
+            exit 0
+          fi
           # Copy artifact to server
           scp deploy.tar.gz ${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/
           
@@ -111,7 +121,13 @@ jobs:
           EOF
 
       - name: Health check
+        if: github.event_name == 'workflow_dispatch'
+        continue-on-error: true
         run: |
+          if [ -z "${{ secrets.SERVER_HOST }}" ]; then
+            echo "⚠️ SERVER_HOST not configured. Skipping health check."
+            exit 0
+          fi
           sleep 10
           response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.SERVER_HOST }}/api/health)
           if [ $response -ne 200 ]; then
@@ -121,8 +137,13 @@ jobs:
           echo "Deployment successful! Health check passed."
 
       - name: Rollback on failure
-        if: failure()
+        if: failure() && github.event_name == 'workflow_dispatch'
+        continue-on-error: true
         run: |
+          if [ -z "${{ secrets.SERVER_USER }}" ] || [ -z "${{ secrets.SERVER_HOST }}" ]; then
+            echo "⚠️ Secrets not configured. Skipping rollback."
+            exit 0
+          fi
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd ${{ secrets.DEPLOY_PATH }}
             # Restore previous version if exists
@@ -139,14 +160,20 @@ jobs:
     name: Notify Deployment Status
     runs-on: ubuntu-latest
     needs: deploy
-    if: always()
+    if: always() && github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Send notification
+        continue-on-error: true
         env:
           MATTERMOST_WEBHOOK: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
           STATUS: ${{ needs.deploy.result }}
         run: |
+          if [ -z "$MATTERMOST_WEBHOOK" ]; then
+            echo "⚠️ MATTERMOST_WEBHOOK_URL not configured. Skipping notification."
+            exit 0
+          fi
+          
           if [ "$STATUS" = "success" ]; then
             MESSAGE="✅ Deployment to production successful!"
             COLOR="#00ff00"
