--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
     name: Deploy to Server
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    if: github.ref == 'refs/heads/main'
     environment: production
 
     steps:
@@ -83,19 +83,29 @@ jobs:
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts || echo "SSH setup skipped - secrets not configured"
         continue-on-error: true
 
+      - name: Check deployment secrets
+        id: check_secrets
+        run: |
+          if [ -z "${{ secrets.SERVER_USER }}" ] || [ -z "${{ secrets.SERVER_HOST }}" ] || [ -z "${{ secrets.DEPLOY_PATH }}" ] || [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "secrets_configured=false" >> $GITHUB_OUTPUT
+            echo "⚠️ Deployment secrets not configured. Skipping deployment step."
+            echo "To enable auto-deployment, configure these secrets in GitHub:"
+            echo "  - SERVER_USER"
+            echo "  - SERVER_HOST"
+            echo "  - DEPLOY_PATH"
+            echo "  - SSH_PRIVATE_KEY"
+          else
+            echo "secrets_configured=true" >> $GITHUB_OUTPUT
+            echo "✅ Deployment secrets configured. Proceeding with deployment."
+          fi
+
       - name: Deploy to server
-        if: github.event_name == 'workflow_dispatch'
+        if: steps.check_secrets.outputs.secrets_configured == 'true'
         env:
           SERVER_USER: ${{ secrets.SERVER_USER }}
           SERVER_HOST: ${{ secrets.SERVER_HOST }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
-          # Check if secrets are configured
-          if [ -z "$SERVER_USER" ] || [ -z "$SERVER_HOST" ] || [ -z "$DEPLOY_PATH" ]; then
-            echo "⚠️ Deployment secrets not configured. Skipping deployment."
-            echo "Configure SERVER_USER, SERVER_HOST, DEPLOY_PATH, and SSH_PRIVATE_KEY in GitHub secrets."
-            exit 0
-          fi
           # Copy artifact to server
           scp deploy.tar.gz ${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/
           
@@ -121,13 +131,9 @@ jobs:
           EOF
 
       - name: Health check
-        if: github.event_name == 'workflow_dispatch'
+        if: steps.check_secrets.outputs.secrets_configured == 'true'
         continue-on-error: true
         run: |
-          if [ -z "${{ secrets.SERVER_HOST }}" ]; then
-            echo "⚠️ SERVER_HOST not configured. Skipping health check."
-            exit 0
-          fi
           sleep 10
           response=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets.SERVER_HOST }}/api/health)
           if [ $response -ne 200 ]; then
@@ -137,13 +143,9 @@ jobs:
           echo "Deployment successful! Health check passed."
 
       - name: Rollback on failure
-        if: failure() && github.event_name == 'workflow_dispatch'
+        if: failure() && steps.check_secrets.outputs.secrets_configured == 'true'
         continue-on-error: true
         run: |
-          if [ -z "${{ secrets.SERVER_USER }}" ] || [ -z "${{ secrets.SERVER_HOST }}" ]; then
-            echo "⚠️ Secrets not configured. Skipping rollback."
-            exit 0
-          fi
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd ${{ secrets.DEPLOY_PATH }}
             # Restore previous version if exists
@@ -160,19 +162,25 @@ jobs:
     name: Notify Deployment Status
     runs-on: ubuntu-latest
     needs: deploy
-    if: always() && github.event_name == 'workflow_dispatch'
+    if: always()
 
     steps:
+      - name: Check notification webhook
+        id: check_webhook
+        run: |
+          if [ -z "${{ secrets.MATTERMOST_WEBHOOK_URL }}" ]; then
+            echo "webhook_configured=false" >> $GITHUB_OUTPUT
+            echo "⚠️ MATTERMOST_WEBHOOK_URL not configured. Skipping notification."
+          else
+            echo "webhook_configured=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Send notification
-        continue-on-error: true
+        if: steps.check_webhook.outputs.webhook_configured == 'true'
         env:
           MATTERMOST_WEBHOOK: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
           STATUS: ${{ needs.deploy.result }}
         run: |
-          if [ -z "$MATTERMOST_WEBHOOK" ]; then
-            echo "⚠️ MATTERMOST_WEBHOOK_URL not configured. Skipping notification."
-            exit 0
-          fi
           
           if [ "$STATUS" = "success" ]; then
             MESSAGE="✅ Deployment to production successful!"
