fix: экранирование пути с пробелами в scp команде
- Добавлены кавычки вокруг scp destination path
- Исправлена ошибка 'No such file or directory' при деплое

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
           # Copy artifact to server
-          scp deploy.tar.gz ${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/
+          scp deploy.tar.gz "${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/"
           
           # Extract and restart services
           ssh ${SERVER_USER}@${SERVER_HOST} << 'ENDSSH'
