fix: использование rsync вместо scp и создание директории перед deploy
- Создание DEPLOY_PATH директории перед копированием
- Замена scp на rsync для лучшей работы с пробелами в путях
- Исправлена ошибка 'dest open Failure'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,8 +107,11 @@ jobs:
           SERVER_HOST: ${{ secrets.SERVER_HOST }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
         run: |
-          # Copy artifact to server
-          scp deploy.tar.gz "${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/"
+          # Ensure deployment directory exists
+          ssh ${SERVER_USER}@${SERVER_HOST} "mkdir -p '${DEPLOY_PATH}'"
+          
+          # Copy artifact to server using rsync
+          rsync -avz deploy.tar.gz "${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/"
           
           # Extract and restart services
           ssh ${SERVER_USER}@${SERVER_HOST} << 'ENDSSH'
