fix: исправлен путь к frontend build в nginx.conf
- Изменен root с /client/build на /current/client-build
- Соответствует структуре после автоматического деплоя

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ server {
     client_max_body_size 10M;
 
     # Root directory for static files
-    root /root/Health Check amoCRM/client/build;
+    root /root/Health Check amoCRM/current/client-build;
     index index.html;
 
     # Gzip compression
