fix: исправлен deploy артефакт и зависимости
- Добавлен package-lock.json в артефакт
- Добавлен nginx.conf в артефакт
- Добавлен ecosystem.config.js в артефакт
- Заменен npm ci на npm install (package-lock.json может отсутствовать)
- Убрано копирование node_modules (будут установлены на сервере)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,7 +129,7 @@ jobs:
             cd current
             
             # Install production dependencies
-            npm ci --production
+            npm install --production
             
             # Copy .env file (should exist on server)
             if [ -f "../.env" ]; then
