--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,11 @@ jobs:
         run: |
           mkdir -p deploy
           cp -r server deploy/
-          mkdir -p deploy/client
-          cp -r client/build deploy/client/build
-          cp package*.json deploy/
-          cp -r node_modules deploy/ || echo "Skipping node_modules"
+          cp -r client/build deploy/client-build
+          cp package.json deploy/
+          cp package-lock.json deploy/
+          cp nginx.conf deploy/ || echo "nginx.conf not found"
+          cp ecosystem.config.js deploy/ || echo "ecosystem.config.js not found"
           tar -czf deploy.tar.gz deploy/
 
       - name: Upload artifact
