fix: добавлена детальная диагностика PM2 в deploy
- Показ PM2 статуса до и после перезапуска
- Delete старого процесса перед запуском нового
- Вывод последних 20 строк логов PM2
- Ожидание 5 секунд для корректного запуска

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,8 +148,19 @@ jobs:
             fi
             
             # Restart application with PM2
-            pm2 restart amocrm-health-monitor || pm2 start server/index.js --name amocrm-health-monitor
+            echo "PM2 status before restart:"
+            pm2 list
+            
+            pm2 delete amocrm-health-monitor || true
+            pm2 start server/index.js --name amocrm-health-monitor --time
             pm2 save
+            
+            echo "Waiting 5 seconds for PM2 to start..."
+            sleep 5
+            
+            echo "PM2 status after restart:"
+            pm2 list
+            pm2 logs amocrm-health-monitor --lines 20 --nostream || true
           ENDSSH
 
       - name: Health check
