fix: исправлена интерполяция переменных в SSH heredoc
- Убраны одинарные кавычки в 'ENDSSH' для правильной интерполяции ${DEPLOY_PATH}
- Теперь cd "${DEPLOY_PATH}" будет работать корректно
- Это должно решить проблему с отсутствующими файлами в директории current

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,7 +115,7 @@ jobs:
           rsync -avz deploy.tar.gz "${SERVER_USER}@${SERVER_HOST}:${DEPLOY_PATH}/"
           
           # Extract and restart services
-          ssh ${SERVER_USER}@${SERVER_HOST} << 'ENDSSH'
+          ssh ${SERVER_USER}@${SERVER_HOST} << ENDSSH
             cd "${DEPLOY_PATH}"
             
             # Backup current version
