fix: add REACT_APP_API_SECRET to frontend build for SSE auth
SSE connection was failing with 401 Unauthorized because frontend
was built without the API_SECRET environment variable.

Changes:
- Added REACT_APP_API_SECRET to frontend build step
- Uses secrets.API_SECRET from GitHub Secrets
- Enables SSE real-time updates authentication

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         run: cd client && npm run build
         env:
           CI: false
+          REACT_APP_API_SECRET: ${{ secrets.API_SECRET }}
 
       - name: Run tests
         run: npm test
