--- a/client/package.json
+++ b/client/package.json
@@ -38,8 +38,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "autoprefixer": "^10.4.22",
     "jest-environment-jsdom": "^30.2.0",
-    "react-scripts": "5.0.1"
+    "postcss": "^8.5.6",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.17"
   },
   "proxy": "http://localhost:3001"
 }
