fix: отключен автодеплой frontend для сохранения рабочего bundle
🐛 Проблема:
- Main собирает bundle БЕЗ детальных метрик (tree-shaking удаляет код)
- Коммит e5ca717 собирает корректный bundle С метриками
- Причина неясна (код идентичен, но хэши bundle разные)

✅ Решение:
- Отключен автодеплой frontend в GitHub Actions
- Frontend деплоится вручную из коммита e5ca717
- На сервере: main.72f116f8.js (449KB) с метриками

📝 Примечание:
- Backend продолжает деплоиться автоматически
- Frontend нужно деплоить вручную при изменениях

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           mkdir -p deploy
           cp -r server deploy/
-          cp -r client/build deploy/client-build
+          # Frontend is deployed manually to preserve working bundle
+          # cp -r client/build deploy/client-build
           cp package.json deploy/
           cp package-lock.json deploy/
           cp nginx.conf deploy/ || echo "nginx.conf not found"
