--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@ server {
 
     # API proxy
     location /api {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -52,7 +52,7 @@ server {
 
     # Health check endpoint
     location /health {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
     }
