--- a/nginx.conf
+++ b/nginx.conf
@@ -62,7 +62,7 @@ server {
         try_files $uri $uri/ /index.html;
         
         # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
