--- a/nginx.conf
+++ b/nginx.conf
@@ -57,15 +57,16 @@ server {
         proxy_set_header Host $host;
     }
 
+    # Cache static assets - must be before location /
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
     # Static files - try files first, then fallback to index.html for SPA routing
     location / {
         try_files $uri $uri/ /index.html;
-        
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
     }
 
     # Deny access to hidden files
