--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,6 +42,11 @@ jobs:
     - name: Install frontend dependencies
       run: cd client && npm install
 
+    - name: Run frontend tests
+      run: cd client && npm test -- --run --coverage
+      env:
+        CI: true
+
     - name: Build frontend
       run: cd client && npm run build
       env:
