fix(ci): resolve frontend test dependencies and backend timeout logic
- Added @vitest/coverage-v8 to client devDependencies
- Fixed double --run flag in ci-cd.yml
- Fixed AmoCRMMonitor DP timeout handling to ensure DB persistence

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
       run: cd client && npm install
 
     - name: Run frontend tests
-      run: cd client && npm test -- --run --coverage
+      run: cd client && npm test -- --coverage
       env:
         CI: true
 
