--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react-swc": "^4.2.2",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.19",
     "jsdom": "^27.2.0",
     "postcss": "^8.4.47",
