fix(ci): make codecov upload non-blocking
- Set fail_ci_if_error to false
- Added continue-on-error to prevent build failure on rate limits

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,8 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         files: ./coverage/lcov.info
-        fail_ci_if_error: true
+        fail_ci_if_error: false
+      continue-on-error: true
 
     - name: Install frontend dependencies
       run: cd client && npm install
