--- a/nginx.conf
+++ b/nginx.conf
@@ -50,14 +50,15 @@ server {
         proxy_send_timeout 86400s;
     }
 
-    # Health check endpoint
-    location /health {
+    # Health check endpoint - use ^~ to give it priority over location /
+    location ^~ /health {
         proxy_pass http://127.0.0.1:3001/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
     }
 
     # Cache static assets - must be before location /
