fix: используем точное совпадение location = /health для максимального приоритета в nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,17 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
+    # Health check endpoint - exact match has highest priority, must be before other locations
+    location = /health {
+        proxy_pass http://127.0.0.1:3001/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+    }
+
     # API proxy
     location /api {
         proxy_pass http://127.0.0.1:3001;
@@ -48,17 +59,6 @@ server {
         # Timeout settings for SSE
         proxy_read_timeout 86400s;
         proxy_send_timeout 86400s;
-    }
-
-    # Health check endpoint - use ^~ to give it priority over location /
-    location ^~ /health {
-        proxy_pass http://127.0.0.1:3001/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        access_log off;
     }
 
     # Cache static assets - must be before location /
