--- a/nginx.conf
+++ b/nginx.conf
@@ -33,14 +33,17 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
-    # Health check endpoint - use ^~ prefix match with highest priority, must be before location /
-    location ^~ /health {
+    # Health check endpoint - exact match has absolute highest priority, must be first
+    location = /health {
         proxy_pass http://127.0.0.1:3001/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
         access_log off;
     }
 
