--- a/nginx.conf
+++ b/nginx.conf
@@ -34,8 +34,9 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
     # Health check endpoint - exact match has absolute highest priority, must be first
+    # Using proxy_pass without path to preserve full URI
     location = /health {
-        proxy_pass http://127.0.0.1:3001/health;
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
