fix: возврат к точному совпадению location = /health с явным путём в proxy_pass

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,10 +33,10 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
-    # Health check endpoint - exact match has absolute highest priority, must be first
-    # Using proxy_pass without path to preserve full URI
+    # Health check endpoint - exact match has absolute highest priority
+    # Must be first location block to ensure it's processed before location /
     location = /health {
-        proxy_pass http://127.0.0.1:3001;
+        proxy_pass http://127.0.0.1:3001/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
