fix: упрощена конфигурация location = /health - точное совпадение имеет абсолютный приоритет в nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,8 +33,8 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
-    # Health check endpoint - exact match has absolute highest priority
-    # Must be first location block to ensure it's processed before location /
+    # Health check endpoint - exact match (=) has ABSOLUTE highest priority in Nginx
+    # This MUST be processed before location / regardless of file order
     location = /health {
         proxy_pass http://127.0.0.1:3001/health;
         proxy_http_version 1.1;
