--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -381,20 +381,28 @@ jobs:
           attempt=1
           while [ $attempt -le $max_attempts ]; do
             echo "Attempt $attempt/$max_attempts..."
-            if response=$(curl -k -s -o /dev/null -w "%{http_code}" https://${{ secrets.SERVER_HOST }}/health 2>&1); then
-              echo "Response code: $response"
-              if [ "$response" = "200" ]; then
-                echo "✅ Deployment successful! Health check passed."
-                exit 0
-              else
-                echo "⚠️ Health check returned status code: $response"
-                if [ $attempt -lt $max_attempts ]; then
-                  echo "Retrying in 5 seconds..."
-                  sleep 5
+            # Get both status code and response body for debugging
+            response_code=$(curl -k -s -o /tmp/health_response.txt -w "%{http_code}" https://${{ secrets.SERVER_HOST }}/health 2>&1)
+            response_body=$(cat /tmp/health_response.txt 2>/dev/null || echo "")
+            
+            echo "Response code: $response_code"
+            if [ -n "$response_body" ] && [ ${#response_body} -lt 200 ]; then
+              echo "Response body: $response_body"
+            fi
+            
+            if [ "$response_code" = "200" ]; then
+              echo "✅ Deployment successful! Health check passed."
+              exit 0
+            else
+              echo "⚠️ Health check returned status code: $response_code"
+              # Show more details for debugging
+              if [ "$response_code" = "404" ]; then
+                echo "404 error - endpoint not found. Checking if it's an Nginx 404 or app 404..."
+                # Check if it's Nginx default 404 page
+                if echo "$response_body" | grep -q "nginx"; then
+                  echo "⚠️ This appears to be Nginx 404, not application 404"
                 fi
               fi
-            else
-              echo "⚠️ Health check could not connect to server"
               if [ $attempt -lt $max_attempts ]; then
                 echo "Retrying in 5 seconds..."
                 sleep 5
@@ -405,6 +413,12 @@ jobs:
           
           echo "⚠️ Health check failed after $max_attempts attempts"
           echo "Please check manually: https://${{ secrets.SERVER_HOST }}/health"
+          echo "Last response code: $response_code"
+          if [ -n "$response_body" ]; then
+            echo "Last response body (first 500 chars):"
+            echo "$response_body" | head -c 500
+            echo ""
+          fi
           exit 0
 
       - name: Rollback on failure
