--- a/nginx.conf
+++ b/nginx.conf
@@ -34,9 +34,9 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
     # Health check endpoint - exact match (=) has ABSOLUTE highest priority in Nginx
-    # This MUST be processed before location / regardless of file order
+    # Using proxy_pass without path preserves the full URI (/health) when forwarding
     location = /health {
-        proxy_pass http://127.0.0.1:3001/health;
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
