--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -316,6 +316,10 @@ jobs:
               exit 1
             }
             
+            # Stop existing instance if running, then start/restart PM2
+            pm2 stop amocrm-health-monitor 2>/dev/null || true
+            pm2 delete amocrm-health-monitor 2>/dev/null || true
+            
             # Start PM2 with ecosystem config if available, otherwise start directly
             if [ -f "ecosystem.config.js" ]; then
               echo "Starting with ecosystem.config.js from $(pwd)"
