--- a/nginx.conf
+++ b/nginx.conf
@@ -34,9 +34,10 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
     # Health check endpoint - exact match (=) has ABSOLUTE highest priority in Nginx
-    # Explicitly specify /health path in proxy_pass to ensure correct forwarding
+    # Using proxy_pass without path preserves the full URI (/health) when forwarding
+    # This is the correct way for location = /health
     location = /health {
-        proxy_pass http://127.0.0.1:3001/health;
+        proxy_pass http://127.0.0.1:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
