--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -265,7 +265,7 @@ jobs:
                 # Test health endpoint directly via nginx after reload
                 echo "Testing health endpoint via nginx (after reload)..."
                 sleep 1
-                if curl -f -s http://127.0.0.1/health > /dev/null 2>&1 || curl -k -f -s https://127.0.0.1/health > /dev/null 2>&1; then
+                if curl -f -s -H 'Host: amohealth.duckdns.org' http://127.0.0.1/health > /dev/null 2>&1 || curl -k -f -s -H 'Host: amohealth.duckdns.org' https://127.0.0.1/health > /dev/null 2>&1; then
                   echo "✓ Health endpoint accessible via nginx immediately after reload"
                 else
                   echo "⚠ Health endpoint not accessible via nginx (will retry after app restart)"
@@ -350,7 +350,7 @@ jobs:
                 
                 # Also test via nginx locally if possible
                 echo "Testing health endpoint via local nginx..."
-                if curl -f -s http://127.0.0.1/health > /dev/null 2>&1 || curl -k -f -s https://127.0.0.1/health > /dev/null 2>&1; then
+                if curl -f -s -H 'Host: amohealth.duckdns.org' http://127.0.0.1/health > /dev/null 2>&1 || curl -k -f -s -H 'Host: amohealth.duckdns.org' https://127.0.0.1/health > /dev/null 2>&1; then
                   echo "✓ Health endpoint accessible via nginx locally"
                 else
                   echo "⚠ Health endpoint not accessible via nginx locally (may need external test)"
