--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -377,16 +377,16 @@ jobs:
         if: steps.check_secrets.outputs.secrets_configured == 'true'
         continue-on-error: true
         run: |
-          echo "Waiting 20 seconds for application to start..."
-          sleep 20
+          echo "Waiting 30 seconds for application to fully start..."
+          sleep 30
           
           echo "Checking health endpoint..."
-          max_attempts=5
+          max_attempts=6
           attempt=1
           while [ $attempt -le $max_attempts ]; do
             echo "Attempt $attempt/$max_attempts..."
             # Get both status code and response body for debugging
-            response_code=$(curl -k -s -o /tmp/health_response.txt -w "%{http_code}" https://${{ secrets.SERVER_HOST }}/health 2>&1)
+            response_code=$(curl -k -s -o /tmp/health_response.txt -w "%{http_code}" --max-time 10 https://${{ secrets.SERVER_HOST }}/health 2>&1)
             response_body=$(cat /tmp/health_response.txt 2>/dev/null || echo "")
             
             echo "Response code: $response_code"
@@ -405,11 +405,13 @@ jobs:
                 # Check if it's Nginx default 404 page
                 if echo "$response_body" | grep -q "nginx"; then
                   echo "⚠️ This appears to be Nginx 404, not application 404"
+                elif echo "$response_body" | grep -q "Page not found"; then
+                  echo "⚠️ This appears to be Express.js 404 - route not registered or intercepted"
                 fi
               fi
               if [ $attempt -lt $max_attempts ]; then
-                echo "Retrying in 5 seconds..."
-                sleep 5
+                echo "Retrying in 10 seconds..."
+                sleep 10
               fi
             fi
             attempt=$((attempt + 1))
